# perfetto

./: Android.bp  BUILD  BUILD.gn  README.md
buildtools/: BUILD.gn
gn/: perfetto.gni
gn/standalone/: BUILD.gn
gn/standalone/toolchain/: BUILD.gn
protos/perfetto/config/: BUILD.gn  data_source_config.proto
protos/perfetto/config/qnx/: qnx_config.proto
protos/perfetto/trace/: perfetto_trace.proto
protos/perfetto/trace/track_event/: track_descriptor.proto
python/perfetto/protos/perfetto/trace/: perfetto_trace_pb2.py  perfetto_trace_pb2.pyi
src/base/: unix_socket.cc
src/trace_processor/importers/common/: import_logs_tracker.h  track_compressor.h  track_tracker.cc  track_tracker.h
src/trace_processor/importers/ftrace/: ftrace_parser.cc  ftrace_parser.h
src/trace_processor/importers/proto/: proto_trace_reader.cc  track_event_module.cc  track_event_parser.cc  track_event_tokenizer.cc  track_event_tokenizer.h  track_event_tracker.cc  track_event_tracker.h
src/trace_processor/perfetto_sql/stdlib/export/: to_svg.sql
src/trace_processor/storage/: stats.h
src/trace_processor/tables/: track_tables.py
src/traced/probes/ftrace/: event_info.cc
src/traced/qnx_probes/: BUILD.gn  README.md  main.cc  qnx_probes_data_source.cc  qnx_probes_data_source.h  qnx_probes_producer.cc  qnx_probes_producer.h
src/traced/qnx_probes/kernel/: BUILD.gn  kernel_data_source.cc  kernel_data_source.h  kernel_trace_config.cc  kernel_trace_config.h  process_info_cache.cc  process_info_cache.h  trace_handler.cc  trace_handler.h
src/traced/qnx_probes/kernel/parser/: cpu_context.cc  cpu_context.h  dynamic_buffer.cc  dynamic_buffer.h  multi_part_event.cc  multi_part_event.h  page_cache.cc  page_cache.h  trace_decoder.cc  trace_decoder.h  trace_event_queue.cc  trace_event_queue.h  trace_header.cc  trace_header.h  trace_parser.cc  trace_parser.h  trace_print.cc  trace_print.h
test/configs/: qnx_probes.cfg
test/trace_processor/diff_tests/stdlib/export/: tests.py
ui/src/bigtrace/: _d3.scss  d3.ts  index.ts
ui/src/components/details/: sql_table_tab.ts
ui/src/components/widgets/sql/table/: add_column_filter_menu.ts
ui/src/components/widgets/sql/table/menus/: add_column_filter_menu.ts
ui/src/frontend/viewer_page/: track_view.ts
ui/src/plugins/dev.perfetto.ExplorePage/: json_handler_unittest.ts  query_node.ts  sql_json_handler.ts
ui/src/plugins/dev.perfetto.ExplorePage/query_builder/: builder.ts  column_info.ts  data_explorer.ts
ui/src/plugins/dev.perfetto.ExplorePage/query_builder/graph/: node_box.ts
ui/src/plugins/dev.perfetto.ExplorePage/query_builder/nodes/: aggregation_node.ts  interval_intersect_node.ts  modify_columns_node.scss  modify_columns_node.ts
ui/src/plugins/dev.perfetto.ExplorePage/query_builder/nodes/dev/: union_node.ts
ui/src/plugins/dev.perfetto.ExplorePage/query_builder/nodes/sources/: slices_source.ts  sql_source.ts  table_source.ts
ui/src/plugins/dev.perfetto.LinuxPerf/: index.ts
ui/src/plugins/dev.perfetto.SqlModules/: sql_modules.ts  sql_modules_impl.ts
ui/src/plugins/dev.perfetto.TraceProcessorTrack/: slice_tracks.ts
ui/src/trace_processor/: perfetto_sql_type.ts
