# Copyright (C) 2017 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../gn/perfetto.gni")
#import("../../../gn/test.gni")

assert(enable_perfetto_traced_qnx_probes)

# Registers as a Producer on the traced daemon.
executable("traced_qnx_probes") {
  public_deps = [ "../../../include/perfetto/ext/traced" ]
  deps = [
    ":data_source",
    ":probes_src",
    "../../../gn:default_deps",
    "../../base:version",
    "../../tracing/ipc/producer",
    "kernel",
  ]  
  sources = [ 
    "main.cc",
  ]
}

source_set("probes_src") {
  deps = [
    ":data_source",
    "../../../gn:default_deps",
    "../../../include/perfetto/ext/traced",
    "../../../protos/perfetto/trace:zero",
    "../../../protos/perfetto/trace/ps:zero",
    "../../../src/kernel_utils:syscall_table",
    "../../base",
    "../../tracing/core",
    "../../tracing/ipc/producer",
    "kernel",
  ]
  sources = [
    "qnx_probes_producer.cc",
    "qnx_probes_producer.h",
  ]
}

# Base class for data sources in traced_probes.
# Needs to be a separate target to avoid cyclical deps.
source_set("data_source") {
  deps = [
    "../../../gn:default_deps",
    "../../tracing/core",
  ]
  sources = [
    "qnx_probes_data_source.cc",
    "qnx_probes_data_source.h",
  ]
}


